--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 *, ::before, ::after {
     box-sizing: border-box;
 }
@@ -11,4 +10,21 @@
     justify-content: center;
     align-items: center;
     background: rgb(228, 228, 228);
+}
+
+h1 {
+    font-size: 1.6em;
+}
+
+h2 {
+    font-size: 1.4em;
+}
+
+h3 {
+    font-size: 1.2em;
+}
+
+
+p {
+    font-size: 1em;
 }
