--- a/src/components/Subreddit/Subreddit.css
+++ b/src/components/Subreddit/Subreddit.css
@@ -18,14 +18,23 @@
   }
 
 .subreddit-img{
+    border: 2px solid #0788BF;
     width: 50%;
-    border-radius: 50%;
+    border-radius: 10%;
     text-align: center;
   }
 
 .subreddit-name {
   font-weight: 600;
-  margin: 1vw;
+  margin-top: 1vw;
 }
 
+.subreddit-name.selected-subreddit {
+  color: white;
+  font-size: 1.3em;
+}
+
+.subreddit-card {
+  padding: 0;
+}
 
