--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,53 @@
     box-sizing: border-box;
 }
 
+html,body {
+    min-width:360px;
+    font-family: 'Roboto', sans-serif;
+
+} 
+
+
+
 .App {
-    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     display: block; 
     justify-content: center;
     align-items: center;
-    background: rgb(228, 228, 228);
+    background: #fafafa;
 }
 
 h1 {
-    font-size: 1.6em;
+    font-size: 1.2em;
+    font-weight: 500;
+    text-transform: uppercase;
+
 }
+
+@media screen and (min-width: 500px){ 
+
+
+    h1 {
+        font-size: 1.8em;
+        font-weight: 500;
+        text-transform: uppercase;
+    
+    }
+
+  }
+
+  @media screen and (min-width: 800px){ 
+
+
+    h1 {
+        font-size: 2.5em;
+        font-weight: 500;
+        text-transform: uppercase;
+    
+    }
+
+  }
 
 h2 {
     font-size: 1.4em;
